--- a/docs/3. Add front-end, render agenda, set up front-end models.md
+++ b/docs/3. Add front-end, render agenda, set up front-end models.md
@@ -207,7 +207,7 @@ Nesta sessão, nós iremos adicionar o front end e o web site, com uma página i
 ### Carregue os dados na PageModel
 
 1. Abra o arquivo */Pages/Index.cshtml.cs*
-1. Edite o construtor para receber a interface `IApiClient` e atribua ela a uma campo local:
+1. Edite o construtor para receber a interface `IApiClient` e atribua ela a um campo local:
 
    ``` csharp
    protected readonly IApiClient _apiClient;
