--- a/docs/4. Add auth features.md
+++ b/docs/4. Add auth features.md
@@ -1,43 +1,44 @@
-# Add ability to log in to the website
+# Adicionar habilidade de login no web site
 
-In this module we're going to add the capability for users to register and sign-in on the front-end web app with a username and password. We'll do this using ASP.NET Core Identity.
+Neste módulo nós iremos adicionar funcionalidades para que o usuário possa se registrar e fazer sing-in na web app do front-end com um nome de usuário e senha. Faremos isso usando o ASP.NET Core Identity.
 
-## Scaffold in ASP.NET Core Identity and Default UI
-> We'll start by scaffolding the default Identity experience into the front-end web app.
+## Fazendo scaffold no ASP.NET Core Identity e na UI padrão
+> Vamos começar fazendo scaffold no Identity com a experiência padrão na web app do front-end.
 
-### Adding Identity using Visual Studio
-1. Right-mouse click on the FrontEnd project in Solution Explorer and select "Add" and then "New Scaffolded Item..."
-1. Select the "Identity" category from the left-hand menu and then select "Identity" from the list and click the "Add" button
-1. In the "Add Identity" dialog, click the '+' button to add a data context class. Call it `FrontEnd.Data.IdentityDbContext`.
-1. In the same dialog, click the '+' button to add a user class. Call it `FrontEnd.Data.User`.
-1. Click the "Add" button
+### Adicionando Identity usando o Visual Studio
+1. Clique com o botão direito do mouse no projeto FrontEnd na Solution Explorer e escolha "Add" e então "New Scaffolded Item..."
+1. Escolha a categoria "Identity" do lado esquerdo do menu e então escolha "Identity" na lista e clique no botão "Add".
+1. Na caixa de diálogo "Add Identity", clique no botão '+' para adicionar uma classe de contexto de dados. Chamaremos essa classe de `FrontEnd.Data.IdentityDbContext`.
+1. No mesmo diálogo, clique no botão '+' e adicione uma classe de usuário, que chamaremos de `FrontEnd.Data.User`.
+1. Clique no botão "Add".
 
-### Adding Identity using the Command Line
-1. Open a command line to the **FrontEnd** project folder
-1. If you haven't done this already, install the command-line scaffolding tool.
+### Adicionando Identity usando a linha de comando
+1. Abra o prompt de comando na pasta do projeto **FrontEnd**
+1. Se você ainda não fez isso, instale a ferramenta de linha de comando de scaffolding.
    ```
    dotnet tool install -g dotnet-aspnet-codegenerator
    ```
-1. Add the `Microsoft.VisualStudio.Web.CodeGeneration.Design` version `3.0.0` package to the project.
+1. Adicione o pacote `Microsoft.VisualStudio.Web.CodeGeneration.Design` version `3.0.0` no projeto.
    ```
    dotnet add package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 3.0.0
    ```
-1. Run this command to generate the code to use Identity.
+1. Execute esse comando para gerar o código para usar Identity.
    ```
    dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext --userClass FrontEnd.Data.User --useDefaultUI
    ```
 
-## Organize the newly created files
-> Note the new files added to the project in the "Areas/Identity" folder. We're going to clean these up a little to better match this project's conventions.
+## Organize os arquivos criados recentemente
+> Note os novos arquivos que foram adicionados ao projeto na pasta "Areas/Identity". Nós vamos alterar um pouco isso para corresponder com as convenções desse projeto.
 
-1. Delete the `_ValidationScriptsPartial.cshtml` file in the `/Areas/Identity/Pages` folder, as we already have one in our project's regular pages folder.
-1. Delete the `ScaffoldingReadme.txt` file.
+1. Exclua o arquivo `_ValidationScriptsPartial.cshtml`na pasta `/Areas/Identity/Pages`, pois nós já temos um em nossa pasta original do projeto.
+1. Exclua o arquivo `ScaffoldingReadme.txt`.
 
-## Add the Identity links to the site header
-> The scaffolded out Identity system includes a Razor partial view that contains the Identity-related UI for the site header, e.g. Login and Register links, user name once logged in, etc. We need to add a call to this partial from our site's own layout page:
+## Adicione os links do Identity no header no site
 
-1. Open the `_Layout.cshtml` file and find the following line: `<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">`
-1. Immediately after this line, add a call to render the newly added `_LoginPartial.cshtml` using the `<partial />` Tag Helper:
+> O sistema do Identity onde foi aplicado o scaffold, inclue uma *Razor view* parcial que contém a UI correspondente ao Identity para o header do site, como por exemplo os links para Login e Registro, nome de usuário uma vez logado, etc. Vamos adicionar uma chamda para essa *view* parcial a partir do próprio layout da página:
+
+1. Abra o arquivo `_Layout.cshtml` e encontre a seguinte linha: `<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">`
+1. Imediatamente após essa linha, adicione uma chamada para o `_LoginPartial.cshtml` recentemente adicionado usando a Tag Helper `<partial />`:
     ``` html
     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
         <partial name="_LoginPartial" />
@@ -49,12 +50,12 @@ In this module we're going to add the capability for users to register and sign-
     </div>
     ```
 
-## Update the app to support admin users
-> Identity supports simple customization of the classes representing users, and when using the default Entity Framework Core, these changes will result in automatic schema updates for storage. We can also customize the default Identity UI by just scaffolding in the pages we want to change. Let's add the ability to create an admin user.
+## Atualize a aplicação para oferecer suporte à usuários administradores
+> O Identity oferece suporte para simples customizações de classes representando usuários, e ao usar o Entity Framework Core padrão, essas mudanças resultarão em atualizações de schema automáticos para armazenamento. Nós também podemos customizar a UI padrão do Identity simplesmente aplicando *scaffolding* nas páginas que queremos alterar. Vamos adicionar a abilidade de criar um usuário administrador.
 
-### Customize the `User` class to support admin users
-1. Open the newly created `User` class in the `/Areas/Identity/Data` folder
-1. Add a `bool` property called `IsAdmin` to indicate whether the user is an admin:
+### Customize a classe `User` para oferecer suporte para usuários administradores
+1. Abra a classe `User` criada recentemente na pasta `/Areas/Identity/Data`
+1. Adicione uma propriedade `bool` para indicar quando que o usuário é um administrador:
     ``` c#
     public class User : IdentityUser
     {
@@ -62,31 +63,32 @@ In this module we're going to add the capability for users to register and sign-
     }
     ```
 
-### Generate the Entity Framework migration for our Identity schema
+### Gerar a migração do Entity Framework para o nosso schema Identity
 
-#### Visual Studio: Package Manager Console 
+#### Visual Studio: Console do Gerenciador de Pacotes
 
-1. In Visual Studio, select the Tools -> NuGet Package Manager -> Package Manager Console
+1. No Visual Studio, escolha Tools -> NuGet Package Manager -> Package Manager Console
 
-1. Run the following commands in the Package Manager Console
+1. Execute os seguintes comandos no Console do Gerenciador de Pacotes
    ```console
    Add-Migration CreateIdentitySchema
    Update-Database
    ```
 
-#### Command line
+#### Linha de comando
 
-1. Run the following commands in the command prompt:
+1. Execute os seguintes comandos no prompt de comando:
     ```console
     dotnet build
     dotnet ef migrations add CreateIdentitySchema
     dotnet ef database update
     ```
 
-### Add the authentication middleware
-> We need to ensure that the request pipeline contains the Authentication middleware before any other middleware that represents resources we want to potentially authorize, e.g. Razor Pages
-1. Open the `Startup.cs` file
-1. In the `Configure` method, add a call to add the Authentication middleware before the Authorization middleware:
+### Adicione o middleware de autenticação
+> Precisamos garantir que o *pipeline* de solicitação contém o *middleware* de autenticação que representa os recursos que 
+queremos autorizar potencialmente, como por exemplo Páginas Razor
+1. Abra o arquivo `Startup.cs`
+1. No método `configure`, adicione uma chamada para adicionar o *middleware* de Autenticação antes do *middleware* de Autorização:
     ``` c#
     public void Configure(IApplicationBuilder app, IHostingEnvironment env)
     {
@@ -115,10 +117,10 @@ In this module we're going to add the capability for users to register and sign-
     }
     ```
 
-### Allow creation of an admin user
-> Let's make it so the site allows creation of an admin user when there isn't one already. The first user to access the site will be deemed the administrator.
+### Criando um usuário administrador
+> Vamos fazer com que o site permita a criação de um usuário administrador quando ainda não existir um. O primeiro usuário a acessar o site será considerado administrador.
 
-1. Create a new class `AdminService` in the `Services` folder. This class will be responsible for managing the creation key generation and tracking whether the site should allow creating admin users.
+1. Crie uma nova classe `AdminService` na pasta `Services`. Essa classe será responsável por gerenciar a geração da chave de criação e rastrear se o site deve permitir a criação de usuários administrativos.
     ``` c#
     public class AdminService
     {
@@ -152,26 +154,26 @@ In this module we're going to add the capability for users to register and sign-
         }
     }
     ```
-1. Extract an interface from the class and call it `IAdminService`
+1. Vamos extrair uma interface dessa classe e vamos chama-la de `IAdminService`
     ``` c#
     public interface IAdminService
     {
         Task<bool> AllowAdminUserCreationAsync();
     }
     ```
-1. In the `Startup` class, modify the `ConfigureServices` method to add the new service to the DI container:
+1. Na classe `Startup`, modifique o método `ConfigureServices` para adicionar o novo serviço ao container de injeção de dependências:
     ``` c#
     services.AddSingleton<IAdminService, AdminService>();
     ```
 
-> We now need to override the default Register page to enable creating the admin account when the first user is registered.
-
-1. Run the Identity scaffolder again, but this time select the `Account\Register` page in the list of files to override and select the `IdentityDbContext (FrontEnd.Data)`
-   * On command line, run
+> Precisamos sobrescrever a página padrão de Registro para habilitar a criação da conta administrativa quando o primeiro usuário for resgistrado.
+1. Execute o processo de scaffolding do Identity novamente, mas dessa vez escolha a página `Account\Register` na lista de arquivos para sobrescrever e escolha o `IdentityDbContext (FrontEnd.Data)`
+   * Na lina de comando, execute
      ```
      dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext --files Account.Register
      ```
-1. Update the `RegisterModel` class in the `Register.cshtml.cs` file to accept `IAdminService` as a parameter and it them to a local member:
+1. Atualize a classe `RegisterModel` no arquivo `Register.cshtml.cs` para aceitar `IAdminService` como parâmetro e atribua ela a um campo local:
+
     ``` c#
     [AllowAnonymous]
     public class RegisterModel : PageModel
@@ -199,7 +201,7 @@ In this module we're going to add the capability for users to register and sign-
         ...
     ```
 
-1. Add code to the `OnPostAsync` that marks the new user as an admin if the `IAdminService.AllowAdminUserCreationAsync` returns true before creating the user:
+1. Adicione código no `OnPostAsync` que marca o novo usuário como um administrador se o `IAdminService.AllowAdminUserCreationAsync` retornar verdadeiro antes de criar o uusuário:
     ``` c#
     if (await _adminService.AllowAdminUserCreationAsync())
     {
@@ -209,7 +211,7 @@ In this module we're going to add the capability for users to register and sign-
 
     var result = await _userManager.CreateAsync(user, Input.Password);
     ```
-1. Update the code that logs a message when users are created to indicate when an admin user is created:
+1. Atualize o código que faz log de uma mensagem quando usuários são criados para indicar quando um usuário administrador é criado:
     ``` c#
     if (user.IsAdmin)
     {
@@ -221,9 +223,10 @@ In this module we're going to add the capability for users to register and sign-
     }
     ```
 
-> If you run the app at this point, you'll see an exception stating that you can't inject a scoped type into a type registered as a singleton. This is the DI system protecting you from a common anti-pattern that can arise when using IoC containers. Let's fix the `AdminService` to use the scoped `IdentityDbContext` correctly.
+> Se você executar a aplicação neste ponto, você verá uma execeção afirmando que você não pode injetar um tipo scoped num tipo 
+registrado como singleton. Isso é o sistema de DI (Injeção de Dependência) te protegendo de um anti-pattern comum que pode ocorrer ao usar containers IoC (Inversão de Controle). Vamos corrigir o `AdminService` para usar o `IdentityDbContext` scoped corretamente.
 
-1. Open the `AdminService.cs` file and change the code to accept an `IServiceProvider` instead of the `IdentityDbContext` in its constructor:
+1. Abra o arquivo `AdminService.cs` e altere o código para aceitar um `IServiceProvider` ao invés de `IdentityDbContext` no construtor:
     ``` csharp
     public class AdminService : IAdminService
     {
@@ -238,7 +241,7 @@ In this module we're going to add the capability for users to register and sign-
 
         // ...
     ```
-1. Now update the `AllowAdminUserCreationAsync` method to create a service scope so we can ask for an instance of the `IdentityDbContext` within a scoped context:
+1. Agora atualize o método `AllowAdminUserCreationAsync` para criar um escopo de serviço para que possamos solicitar uma instância do `IdentityDbContext` dentro do escopo de contexto:
     ``` csharp
     public async Task<bool> AllowAdminUserCreationAsync()
     {
@@ -265,14 +268,15 @@ In this module we're going to add the capability for users to register and sign-
         }
     }
     ```
-1. Re-launch the application and now you shouldn't get an exception.
+1. Execute a aplicação novamente e agora você não deve ver uma execeção.
 
-# Adding admin section
+# Adicionando uma sessão de administrador
 
-## Add an admin policy
-> Rather than looking up the user in the database each time the app needs to check if a user is an admin, we can read this information once when the user logs in, then store it as an additional claim on the user identity. We also need to add an authoriation policy to the app that corresponds to this claim, that we can use to protect resources we only want admins to be able to access.
+## Adicionando uma política de administração
 
-1. Add a new class `ClaimsPrincipalFactory` in the `/Areas/Identity` folder and add code that adds an admin claim for users who are admins:
+> Invés de acessar o banco de dados para buscar um usuário cada vez que a aplicação precisar verificar se um usuário é um administrador, nós podemos ler essa informação uma vez quando o usuário se *logar*, e então armazenar isso como uma *claim* adicional na identidade do usuário. Precisamos adicionar também uma política de autorização na aplicação que corresponda à essa *claim*, assim nós podemos usar isso para proteger os recursos que nós queremos que apenas usuários administradores acessem.
+
+1. Adicione uma nova classe `ClaimsPrincipalFactory.cs` na pasta `/Areas/Identity` e adicione código que adiciona uma *claim* de administrador para usuários que são administradores:
     ``` c#
     public class ClaimsPrincipalFactory : UserClaimsPrincipalFactory<User>
     {
@@ -297,7 +301,7 @@ In this module we're going to add the capability for users to register and sign-
         }
     }
     ```
-1. Add a new class file `AuthHelpers.cs` in the `Infrastructure` folder and add the following helper methods for reading and setting the admin claim:
+1. Adicione uma nova classe `AuthHelpers.cs` na pasta `Infrastructure` e adicione os seguintes métodos de ajudar para a leitura de definição de *claim* de administrador:
     ``` c#
     namespace FrontEnd.Infrastructure
     {
@@ -334,14 +338,14 @@ In this module we're going to add the capability for users to register and sign-
     }
     ```
 
-1. Register the custom `UserClaimsPrincipalFactory<User>` in the `IdentityHostingStartup` class:
+1. Registre a fábrica customizada `UserClaimsPrincipalFactory<User>` na classe `IdentityHostingStartup`:
 
     ```csharp
     services.AddDefaultIdentity<User>()
             .AddEntityFrameworkStores<IdentityDbContext>()
             .AddClaimsPrincipalFactory<ClaimsPrincipalFactory>();
     ```
-1. Add authorization services with an admin policy to the `ConfigureServices()` method of `Startup.cs` that uses the just-added helper methods to require the admin claim:
+1. Adicione serviços de autorização com uma política de administrador no método `ConfigureServices()` da `Startup.cs` que usa os métodos de ajudar que acabaram de ser adicionados e exigem a *claim* de administrador:
 
     ```csharp
     services.AddAuthorization(options =>
@@ -353,7 +357,7 @@ In this module we're going to add the capability for users to register and sign-
         });
     });
     ```
-1. Add `System.Security.Claims` to the list of usings in `Index.cshtml.cs`, then use the helper method in the page model to determine if the current user is an administrator.
+1. Adicione `System.Security.Claims` a lista de usings no `Index.cshtml.cs`, e então use o método de ajuda no modelo de página para determinar se o usuário em questão é um administrador.
 
     ```csharp
     public bool IsAdmin { get; set; }
@@ -366,7 +370,7 @@ In this module we're going to add the capability for users to register and sign-
         // ...
     }
     ```
-1. On the `Index` razor page, add an edit link to allow admins to edit sessions. You'll add the following code directly after the session `foreach` loop:
+1. Na página razor `Index`, adicione um link de edição que permita que administradores editem sessões. Você vai adicionar o seguinte código logo depois do loop `foreach` da sessão:
 
     ```html
 	<div class="card-footer">
@@ -386,8 +390,8 @@ In this module we're going to add the capability for users to register and sign-
 	    </ul>
 	</div>
     ```
-1. Add a nested `Admin` folder to the `Pages` folder then add an `EditSession.cshtml` razor page and `EditSession.cshtml.cs` page model to it.
-1. Next, we'll protect pages in the `Admin` folder with an Admin policy by making the following change to the `services.AddRazorPages()` call in `Startup.ConfigureServices`:
+1. Adicione uma subpasta `Admin` na pasta `Pages` e então adicione uma página razor `EditSession.cshtml` e um modelo de página `EditSession.cshtml.cs` para ela.
+1. A seguir, nós iremos proteger a página na pasta `Admin` com uma política de administrador fazendo a seguinte alteração na chamada `services.AddRazorPages()` do `Startup.ConfigureServices`:
 
    ```csharp
    services.AddRazorPages(options =>
@@ -396,8 +400,8 @@ In this module we're going to add the capability for users to register and sign-
    });
    ```
 
-## Add a form for editing a session
-1. Change `EditSession.cshtml.cs` to render the session in the edit form:
+## Adicione um formulário para editar uma sessão
+1. Altere o `EditSession.cshtml.cs` para renderizar a sessão no formulário de edição:
 
    ```csharp
    public class EditSessionModel : PageModel
@@ -427,14 +431,14 @@ In this module we're going to add the capability for users to register and sign-
    }
    ```
 
-1. Add the "{id}" route to the `EditSession.cshtml` form:
+1. Adicione a rota "{id}" no formulário `EditSession.cshtml`:
 
     ```html
     @page "{id}"
     @model EditSessionModel
     ```
 
-1. Add the following edit form to `EditSession.cshtml`:
+1. Adicione o seguinte formmulário de edição no `EditSession.cshtml`:
 
    ```html
    <h3>Edit Session</h3>
@@ -483,7 +487,7 @@ In this module we're going to add the capability for users to register and sign-
         <partial name="_ValidationScriptsPartial" />
    }
    ```
-1. Add code to handle the `Save` and `Delete` button actions in `EditSession.cshtml.cs`:
+1. Adicione código para menipular os botões de ação `Save` e `Delete` no `EditSession.cshtml.cs`:
 
    ```csharp
    public async Task<IActionResult> OnPostAsync()
@@ -511,18 +515,17 @@ In this module we're going to add the capability for users to register and sign-
    }
    ```
 
-1. Add a `[BindProperty]` attribute to the `Session` property in `EditSession.cshtml.cs` to make sure properties get bound
-on form posts:
+1. Adicione um atributo `[BindProperty]` na propriedade `Session` no `EditSession.cshtml.cs` para garantir que as propriedades serão vinculadas na postagem do formulário:
    ```csharp
    [BindProperty]
    public Session Session { get; set; }
    ```
 
-1. The form should be fully functional.
+1. O formulário deve estar completamente funcional.
 
-## Add success message to form post and use the [PRG](https://en.wikipedia.org/wiki/Post/Redirect/Get) pattern
+## Adicione mensagem de sucesso na postagem do formulário e use o padrão [PRG](https://en.wikipedia.org/wiki/Post/Redirect/Get)
 
-1. Add a `TempData` decorated `Message` property and a `ShowMessage` property to `EditSession.cshtml.cs`:
+1. Adicione uma propriedade `Message` decorada com `TempData` e uma propriedade `ShowMessage` no `EditSession.cshtml.cs`:
 
    ```csharp
    [TempData]
@@ -531,7 +534,7 @@ on form posts:
    public bool ShowMessage => !string.IsNullOrEmpty(Message);
    ```
 
-1. Set a success message in the `OnPostAsync` and `OnPostDeleteAsync` methods and change `Page()` to `RedirectToPage()`:
+1. Defina uma mensagem de sucesso nos métodos `OnPostAsync` e `OnPostDeleteAsync` e altere `Page()` para `RedirectToPage()`:
 
    ```csharp
    public async Task<IActionResult> OnPostAsync()
@@ -563,7 +566,7 @@ on form posts:
    }
    ```
 
-1. Update `EditSession.cshtml` to show the message after posting. Add the following code directly below the `<h3>` tag at the top:
+1. Atualize o `EditSession.cshtml` para exibir a mensagem após a postagem. Adicione o seguinte código logo abaixo da tag `<h3>` no topo:
 
    ```html
    @if (Model.ShowMessage)
@@ -575,9 +578,9 @@ on form posts:
    }
    ```
 
-> TempData-backed properties also flow across pages, so we can update the Index page to show the message value too, e.g. when the session is deleted
+> Propriedades do tipo TempData-backed também fluem entre páginas, sendo assim nós podemos atualizar a página Index para exibir o valor da mensagem também, quando a sessão for deletada por exemplo
 
-1. Copy the message display markup from the top of the `EditSession.cshtml` file to the top of the `Index.cshtml` file:
+1. Copie a marcação de exibição da mensagem no topo do arquivo `EditSession.cshtml` para o topo do arquivo `Index.cshtml`:
     ``` html
     @if (Model.ShowMessage)
     {
@@ -587,28 +590,28 @@ on form posts:
         </div>
     }
     ```
-1. Copy the properties from the `EditSession.cshtml.cs` Page Model class file to the `Index.cshtml.cs` Page Model too:
+1. Copie as propriedades do arquivo da classe de modelo de página `EditSession.cshtml.cs` para o modelo de página `Index.cshtml.cs` também:
     ``` csharp
     [TempData]
    public string Message { get; set; }
 
    public bool ShowMessage => !string.IsNullOrEmpty(Message);
     ```
-1. Rebuild and run the app then delete a session and observe it redirect to the home page and display the success message
+1. Faça um *rebuild* e execute a aplicação e então apague uma sessão e observe o redirecionamente para a página inicial e exiba a mensagem de sucesso
 
-## Create a Tag Helper for setting authorization requirements for UI elements
-We're currently using `if` blocks to determine whether to show parts of the UI based the user's auth policies. We can clean up this code by creating a custom [Tag Helper](https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/intro).
+## Crie uma Tag helper com os requisitos para as configurações de autorização dos elementos de UI
+Atualmente nós estamos usando blocos `if` para determinar onde exibir partes da UI com base nas políticas de autorização do usuário. Nós podemos simplificar esse código criando um [Tag Helper](https://docs.microsoft.com/en-us/aspnet/core/mvc/views/tag-helpers/intro) customizado.
 
-1. Create a new folder called `TagHelpers` in the root of the *FrontEnd* project. Right-click on the folder, select *Add* / *New Item...* / *Razor Tag Helper*. Name the Tag Helper `AuthzTagHelper.cs`.
-1. Modify the `HtmlTargetElement` attribute to bind to all elements with an "authz" attribute:
+1. Crie uma nova pasta chamada `TagHelpers` na raiz do projeto *FrontEnd*. Clique com o botão direito na pasta, escolha *Add* / *New Item...* / *Razor Tag Helper*. Nomeie a Tag Helper de `AuthzTagHelper.cs`.
+1. Modifique o atributo `HtmlTargetElement` para vincular todos os elementos com um atributo "authz":
    ```csharp
    [HtmlTargetElement("*", Attributes = "authz")]
    ```
-1. Add an additional `HtmlTargetElement` attribute to bind to all elements with an "authz-policy" attribute:
+1. Crie um atributo adicional `HtmlTargetElement` para vincular todos os elementos com um atributo "authz-policy":
    ```csharp
    [HtmlTargetElement("*", Attributes = "authz-policy")]
    ```
-1. Inject the `AuthorizationService` as shown:
+1. Faça uma injeção do `AuthorizationService` como mostrado a seguir:
    ```csharp
    private readonly IAuthorizationService _authzService;
 
@@ -617,7 +620,7 @@ We're currently using `if` blocks to determine whether to show parts of the UI b
        _authzService = authzService;
    }
    ```
-1. Add the following properties which will represent the `auth` and `authz` attributes we're binding to:
+1. Adicione as seguintes propriedades as quais representarão os atributos `auth` e `authz` que nós estamos vinculando:
    ```csharp
    [HtmlAttributeName("authz")]
    public bool RequiresAuthentication { get; set; }
@@ -625,13 +628,13 @@ We're currently using `if` blocks to determine whether to show parts of the UI b
    [HtmlAttributeName("authz-policy")]
    public string RequiredPolicy { get; set; }
    ```
-1. Add a `ViewContext` property:
+1. Adicione uma propriedade `ViewContext`:
    ```csharp
    [ViewContext]
    public ViewContext ViewContext { get; set; }
    ```
-1. Mark the `ProcessAsync` method as `async`.
-1. Add the following code to the `ProcessAsync` method:
+1. Marque o método `ProcessAsync` como `async`.
+1. Adicione o seguinte código no método `ProcessAsync`:
    ```csharp
    public override async Task ProcessAsync(TagHelperContext context, TagHelperOutput output)
    {
@@ -673,13 +676,13 @@ We're currently using `if` blocks to determine whether to show parts of the UI b
        }
    }
    ```
-1. Register the new Tag Helper in the `_ViewImports.cshtml` file:
+1. Registre a nova Tag Helper no arquivo `_ViewImports.cshtml`:
    ```html
    @namespace FrontEnd.Pages
    @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
    @addTagHelper *, FrontEnd
    ```
-1. We can now update the `Index.cshtml` page to replace the `if` block which controls the Edit button's display with declarative code using our new Tag Helper. Remove the `if` block and add `authz="true` to the `<a>` which displays the edit button:
+1. Agora nós podemos atualizar a página `Index.cshtml` para substituir o bloco `if` que controla a exibição do botão de edição com código declarativo usando a nossa nova Tag Helper. Remova o bloco `if` e adicione `authz="true` na tag `<a>` que exibe o botão de edição:
    ```html
 	<div class="card-footer">
 	    <ul class="list-inline mb-0">
@@ -694,4 +697,4 @@ We're currently using `if` blocks to determine whether to show parts of the UI b
 	</div>
     ```
     
-**Next**: [Session #5 - Add Agenda](5.%20Add%20personal%20agenda.md) | **Previous**: [Session #3 - Add front-end](3.%20Add%20front-end%2C%20render%20agenda%2C%20set%20up%20front-end%20models.md)
+**Próximo**: [Sessão #5 - Adicionar Agenda](5.%20Add%20personal%20agenda.md) | **Anterior**: [Sessão #3 - Adicionar front-end](3.%20Add%20front-end%2C%20render%20agenda%2C%20set%20up%20front-end%20models.md)
